Adicionando novas imagens

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PetShow</title>
 
+        <meta 
+        name="description" 
+        content="PetShow: tudo para seu pet em um só lugar! Loja, Clínica Veterinária e Central de Exames."
+        />
+
         <!-- Fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
@@ -226,76 +231,80 @@
             </a>
         </main>  
 
-    
-        
         <!-- Depoimentos -->
         <section id="testemony" class="testemonies-container">
             <h2>Depoimentos</h2>
             <div class="testemonies-card-container">
                 <div class="testemonies-card">
-                    <i class="fab fa-buffer"></i>
-                    <h3>Desenvolvimento Fullsatck</h3>
+                    <img src="../img/users/user1.png" mg>
+                    <h3>Meu pet é sempre bem recebido!</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Cupiditate eius ea eligendi placeat rerum
-                        reiciendis esse totam quaerat molestiae, et illum.
-                        Consequuntur quibusdam consequatur neque exercitationem
-                        corrupti officiis .
+                        reiciendis esse totam quaerat molestiae, et illum.                        
+                    </p>
+                    <p class="user-testemonial">
+                        Bianca Souza 
                     </p>
                 </div>
                 <div class="testemonies-card">
-                    <i class="fas fa-bolt"></i>
-                    <h3>Sites leves e rápidos</h3>
+                    <img src="../img/users/user2.png" >
+                    <h3>Òtimos profissionais</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Cupiditate eius ea eligendi placeat rerum
                         reiciendis esse totam quaerat molestiae, et illum.
-                        Consequuntur quibusdam consequatur neque exercitationem
-                        corrupti officiis .
+                    </p>
+                    <p class="user-testemonial">
+                        Rebeca Delgado
                     </p>
                 </div>
                 <div class="testemonies-card">
-                    <i class="fas fa-cart-plus"></i>
-                    <h3>E-commerce</h3>
+                    <img src="../img/users/user3.png" />
+                    <h3>Meu Jojô é muito bem atendido</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Cupiditate eius ea eligendi placeat rerum
                         reiciendis esse totam quaerat molestiae, et illum.
-                        Consequuntur quibusdam consequatur neque exercitationem
-                        corrupti officiis .
+                    </p>
+                    <p class="user-testemonial">
+                        Kaori Yamameshi
                     </p>
                 </div>
                 <div class="testemonies-card">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>SEO</h3>
+                    <img src="../img/users/user4.png" />
+                    <h3>Os melhores petiscos!</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Cupiditate eius ea eligendi placeat rerum
                         reiciendis esse totam quaerat molestiae, et illum.
-                        Consequuntur quibusdam consequatur neque exercitationem
-                        corrupti officiis .
+                    </p>
+                    <p class="user-testemonial">
+                        Roger Mello
                     </p>
                 </div>
                 <div class="testemonies-card">
-                    <i class="fas fa-chess-pawn"></i>
-                    <h3>Estratégia de Marketing</h3>
+                    <img src="../img/users/user5.png" />
+                    <h3>Adoro a variedade da loja!</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Cupiditate eius ea eligendi placeat rerum
                         reiciendis esse totam quaerat molestiae, et illum.
-                        Consequuntur quibusdam consequatur neque exercitationem
-                        corrupti officiis .
+                    </p>
+                    <p class="user-testemonial">
+                        Charles
                     </p>
                 </div>
                 <div class="testemonies-card">
-                    <i class="fas fa-cloud"></i>
-                    <h3>Hospedagem AWS/Azure</h3>
+                    <img src="../img/users/user6.png" />
+                    <h3>Petshow é sensacional!!</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Cupiditate eius ea eligendi placeat rerum
                         reiciendis esse totam quaerat molestiae, et illum.
-                        Consequuntur quibusdam consequatur neque exercitationem
-                        corrupti officiis .
+                    </p>
+                    <p class="user-testemonial">
+                        Larissa Janelli
                     </p>
                 </div>
             </div>           
