ajusando altura seção Destaque, deletando img não utilizadas

--- a/index.html
+++ b/index.html
@@ -178,20 +178,21 @@
                         </div>
                     </div>
                 </div>
-            </div>          
-
+            </div> 
+                        
             <!-- Slide -->
             <h2>Destaques</h2>
-            <div id="destaques" class="swiper">
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <a href="#" class="swiper-slide slide01">
-                    <p class="text-cto">Comprar</p>
-                </a>
-                <a href="#" class="swiper-slide slide02">
-                    <p class="text-cto">Comprar</p>
-                </a>
-                <a href="#" class="swiper-slide slide03">
+            <div class="swiper">
+                <span id="destaques" class="sr-only"></span>        
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <a href="#" class="swiper-slide slide01">
+                        <p class="text-cto">Comprar</p>
+                    </a>
+                    <a href="#" class="swiper-slide slide02">
+                        <p class="text-cto">Comprar</p>
+                    </a>
+                    <a href="#" class="swiper-slide slide03">
                     <p class="text-cto">Comprar</p>
                 </a>
                 <a href="#" class="swiper-slide slide04">
@@ -335,7 +336,11 @@
                             <li><p><strong>Endereço:</strong> Av. das Américas, 7000, Barra da Tijuca, Rio de Janeiro</p></li>
                             <li><p>
                                 <strong>Ver mapa:</strong>
-                                <a class="ver-mapa" href="https://www.google.com.br/maps/place/American+Pet/@-22.9998707,-43.4509851,13z/data=!4m9!1m2!2m1!1spet+shop+barra+da+tijuca!3m5!1s0x9bdba2e1e12585:0x1daf3b84d5384eb4!8m2!3d-22.9998707!4d-43.3850671!16s%2Fg%2F1ptz61fqj">
+                                <a 
+                                class="ver-mapa" 
+                                target="_blank"
+                                href="https://www.google.com.br/maps/place/American+Pet/@-22.9998707,-43.4509851,13z/data=!4m9!1m2!2m1!1spet+shop+barra+da+tijuca!3m5!1s0x9bdba2e1e12585:0x1daf3b84d5384eb4!8m2!3d-22.9998707!4d-43.3850671!16s%2Fg%2F1ptz61fqj"
+                                >
                                     Petshow
                                 </a>
                             </p></li>
